--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,57 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
+  box-sizing: border-box;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+.Navbar{
+  background-color: #161616;
+  width: 100%;
+  height: 2%;  
+  
+  display: flex;
+  justify-content: space-between;
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+  padding: 20px  ;
+  position: sticky;
+  z-index: 9999;
+
+  @media only screen and (max-width: 768px) {
+    width: 100%;
+    padding: 10px;
+    background-color: transparent;
   }
 }
+.Links{
+  display: flex;
+  align-items: center;
+  gap: 25px;
+  
+}
+.Navbar a{
+  cursor: pointer;
+  text-decoration: none;
+  color: white;
+  position: relative;
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  &:after {
+    content: "";
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 0%;
+    height: 2px;
+    background-color: white;
+    transition: all 0.3s ease-in-out;
   }
-}
 
-.card {
-  padding: 2em;
-}
+  &.active:after {
+    width: 100%;
+  }
 
-.read-the-docs {
-  color: #888;
+  &:hover:after {
+    width: 100%;
+  }
+
 }
