--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   flex-direction: column;
   align-items: center;
   background-color: #e5e5e5;
+  
 }
 
 .Navbar{
@@ -18,16 +19,11 @@
   
   display: flex;
   justify-content: space-between;
-
   padding: 20px  ;
   position: sticky;
   z-index: 9999;
 
-  @media only screen and (max-width: 768px) {
-    width: 100%;
-    padding: 10px;
-    background-color: transparent;
-  }
+
 }
 
 .logo{
@@ -80,7 +76,47 @@
 }
 
 
+.body{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+.routines{
+  display: flex;
+  flex-direction: column;
+ 
+  width: 80%;
+}
+*{
+  border: 1px solid black;
+}
+.activitiesContainer{
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ background-color: white; 
+ padding: 20px;
+}
+
+.activities{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 10px; 
+
+
+}
+
+.activity{
+  width: 10%;
+  background-color: #e5e5e5;
+}
+.activity img{
+  width: 100px;
+}
 
 .read-the-docs {
   color: #888;
