--- a/src/App.css
+++ b/src/App.css
@@ -1,59 +1,53 @@
-*{
+* {
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
   box-sizing: border-box;
 }
-.App{
+.App {
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #e5e5e5;
-  
 }
 
-.Navbar{
+.Navbar {
   background-color: #e5e5e5;
   width: 80%;
-  height: 2%;  
-  
+  height: 2%;
+
   display: flex;
   justify-content: space-between;
-  padding-top: 20px  ;
+  padding-top: 20px;
   padding-bottom: 20px;
   position: sticky;
   z-index: 9999;
-
-
 }
 
-.logo{
-  background-color: #FC4C02;
-  font-family: 'Pathway Gothic One', Arial, sans-serif!important;
+.logo {
+  background-color: #fc4c02;
+  font-family: "Pathway Gothic One", Arial, sans-serif !important;
   color: white;
   line-height: 3rem;
   letter-spacing: 1px;
   padding: 0px 10px;
   font-size: 30px;
-  
 }
 
-.Links{
+.Links {
   display: flex;
   align-items: center;
   gap: 25px;
-  
 }
-.Navbar a{
+.Navbar a {
   cursor: pointer;
   text-decoration: none;
   color: #141414;
   position: relative;
-  font-family: 'Pathway Gothic One', Arial, sans-serif!important;
+  font-family: "Pathway Gothic One", Arial, sans-serif !important;
   letter-spacing: 1px;
   text-transform: uppercase;
   padding: 0px 30px;
-  
 
   &:after {
     content: "";
@@ -63,10 +57,9 @@
     transform: translateX(-50%);
     width: 0%;
     height: 2px;
-    background-color: #FC4C02;
+    background-color: #fc4c02;
     transition: all 0.3s ease-in-out;
   }
-  
 
   &.active:after {
     width: 100%;
@@ -81,106 +74,90 @@
   display: flex;
   align-items: center;
   font-size: 14px;
-
 }
 
-
-.body{
+.body {
   display: flex;
   flex-direction: column;
   align-items: center;
- 
-  
+  min-width: 100%;
 }
 
-
-.activitiesContainer{
-
-
+.activitiesContainer {
   width: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
- background-color: white; 
- box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.4);
-
+  background-color: white;
+  box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.4);
 }
 
-.activitiesBanner{
+.activitiesBanner {
   font-size: 60px;
   margin-top: 2%;
 }
-.searchContainer{
+.searchContainer {
   height: 40px;
-  width: 90%;
+  width: 80%;
   display: flex;
   align-items: center;
   justify-content: space-between;
-
-  
-  
 }
 
-#searchInput{
- 
- 
- width: 20%;
- margin: 0px;
- 
- 
- 
+#searchInput {
+  width: 20%;
+  margin: 0px;
 }
-.searchContainer button{
-  background-color: #FC4C02;
+.searchContainer button {
+  background-color: #fc4c02;
   height: 40px;
   display: flex;
   align-items: center;
-  
+
   color: white;
-  
 }
 button {
- cursor: pointer;
- border: 2px solid  #FC4C02; 
- background-color: #e5e5e5;
- border-radius: 0.9em;
- padding: 0.8em 1.2em 0.8em 1em;
- transition: all ease-in-out 0.2s;
- font-size: 16px;
+  cursor: pointer;
+  border: 2px solid #fc4c02;
+  background-color: #e5e5e5;
+  border-radius: 0.9em;
+  padding: 0.8em 1.2em 0.8em 1em;
+  transition: all ease-in-out 0.2s;
+  font-size: 16px;
 }
 
 button span {
- display: flex;
- justify-content: center;
- align-items: center;
- color: #fff;
- font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-weight: 600;
 }
 
 button:hover {
- background-color:  #FC4C02;
- color: white;
+  background-color: #fc4c02;
+  color: white;
 }
 
-.activities{
+.activities {
   display: flex;
+  width: 90%;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 30px; 
-  font-family: 'Pathway Gothic One', Arial, sans-serif!important;
-  padding:  0% 5% 0% 5%;
+  gap: 30px;
+  font-family: "Pathway Gothic One", Arial, sans-serif !important;
+  padding: 0% 5% 0% 5%;
 }
 
-
-.activity img{
-  width: 100%; 
-} 
+.activity img {
+  width: 100%;
+}
 
 .activity {
   width: 20%;
   height: 300px;
-  position: relative; 
+  position: relative;
   background: mediumturquoise;
   display: flex;
   align-items: center;
@@ -188,7 +165,6 @@ button:hover {
   font-size: 25px;
   font-weight: bold;
   border-radius: 15px;
-  
 }
 
 .activity::before,
@@ -215,7 +191,7 @@ button:hover {
 .activity::after {
   bottom: 0;
   left: 0;
-  border-radius: 0 100%  0 15px;
+  border-radius: 0 100% 0 15px;
 }
 
 .activity:hover::before,
@@ -228,23 +204,22 @@ button:hover {
 
 .activity:hover:after {
   content: var(--description);
+  font-size: 16px;
+  padding: 5px;
 }
-.activityTitle{
- 
-  padding-right: 20%;
- 
+.activityTitle {
   background-color: #e5e5e579;
-  
+  padding: 5px;
+  width: 100%;
 }
 
-.pagination{
-  margin:3% ;
+.pagination {
+  margin: 3%;
   display: flex;
   justify-content: space-between;
   gap: 5px;
-  
 }
-.pagination button{
+.pagination button {
   font-size: 16px;
   padding: 10px;
   background-color: #e5e5e5;
@@ -252,7 +227,7 @@ button:hover {
   cursor: pointer;
 }
 .pagination button.active {
-  background-color: #FC4C02;
+  background-color: #fc4c02;
   color: white;
 }
 .read-the-docs {
