--- a/src/Styles/Routines.css
+++ b/src/Styles/Routines.css
@@ -12,16 +12,66 @@
   background-color: white;
   box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.4);
 }
+.routinesHeader {
+  display: flex;
+  justify-content: space-between;
+}
+.routinesHeader h2 {
+  margin: 5px;
+  font-size: 40px;
+}
+.routinesHeader button {
+  margin: 5px;
+}
+.routinesBanner {
+  font-size: 60px;
+  margin-top: 2%;
+}
 
 .routines {
   width: 80%;
-    display: flex;
+  
+  display: flex;
   flex-direction: column;
- gap: 30px;
+  gap: 2rem;
 
   background-color: white;
 }
 .routine {
   background-color: #e5e5e5;
   box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.4);
+  min-height: 10rem;
+  padding: 5px;
+  
+}
+.bold{
+    line-height: 10px;
+    font-weight: 700;
+}
+.author{
+    font-size: 16px;
+}
+.exercises {
+  display: flex;
+
+}
+.exercises li {
+  list-style: none;
+  
+  min-width: 8%;
+  max-width: 10%;
+  margin: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+}
+.exercises div{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 1px solid black;
+    padding: 3px;
+   
+  
 }
