--- a/src/Styles/Routines.css
+++ b/src/Styles/Routines.css
@@ -53,13 +53,14 @@
 }
 .exercises {
   display: flex;
+  flex-wrap: wrap;
 
 }
 .exercises li {
   list-style: none;
+  height: 10rem;
+  width: 15%;
   
-  min-width: 8%;
-  max-width: 10%;
   margin: 5px;
   display: flex;
   flex-direction: column;
@@ -74,4 +75,61 @@
     padding: 3px;
    
   
+}
+.activityRoutines{
+    width: 20%;
+    height: 70px;
+    position: relative;
+    background: mediumturquoise;
+    display: flex;
+    align-items: center;
+    box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.4);
+    font-size: 25px;
+    font-weight: bold;
+    border-radius: 15px;
+}
+.activityRoutines::before,
+.activityRoutines::after {
+  position: absolute;
+  content: "";
+  width: 0%;
+  height: 0%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 25px;
+  font-weight: bold;
+  background-color: #e5e5e5;
+  transition: all 0.5s;
+}
+
+.activityRoutines::before {
+  top: 0;
+  right: 0;
+  border-radius: 0 5px 0 100%;
+}
+
+.activityRoutines::after {
+  bottom: 0;
+  left: 0;
+  border-radius: 0 100% 0 15px;
+}
+
+.activityRoutines:hover::before,
+.activityRoutines:hover:after {
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+  transition: all 0.5s;
+}
+
+.activityRoutines:hover:after {
+  content: var(--description);
+  font-size: 16px;
+  padding: 5px;
+}
+.activityTitle {
+  background-color: #e5e5e579;
+  padding: 5px;
+  width: 100%;
 }
