--- a/src/login.css
+++ b/src/login.css
@@ -1,5 +1,5 @@
 
-.loginContainer{
+/* .loginContainer{
     width: 80vw;
     height: 90vh;
     display: flex;
@@ -8,10 +8,11 @@
     justify-content: center;
     background-color: white; 
     box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.4);
-}
+} */
 
 .loginCard {
     width: 500px;
+    position: relative;
     height: 390px;
     margin: auto;
     padding: 30px;
@@ -20,7 +21,23 @@
     background-color: #e8e8e8;
     box-shadow: 2px 2px 10px #ccc;
 }
+  .close-button-nav{
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 10px;
+  }
+  .close-button-nav {
+    color: #fc4c02;
+    cursor: pointer;
+    font-size: 25px;
+    font-weight: 600;
+    transition: color 0.2s ease-in-out;
+  }
   
+  .close-button-nav:hover {
+    color: #0a010f;
+  }
   .cardHeader {
     text-align: center;
     margin-bottom: 25px;
