--- a/src/Styles/myRoutines.css
+++ b/src/Styles/myRoutines.css
@@ -6,6 +6,7 @@
     align-items: center;
     background-color: white;
     box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.4);
+    
   }
   
   .header {
@@ -20,3 +21,13 @@
     font-size: 20px;
     margin-top: 2%;
   }
+  .routine{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.4);
+  }
+  
+  
