--- a/src/Styles/myRoutines.css
+++ b/src/Styles/myRoutines.css
@@ -1,33 +1,80 @@
-.myRoutines {
-    width: 80%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: white;
-    box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.4);
-    
-  }
-  
-  .header {
-    font-size: 60px;
-    margin-top: 2%;
-  }
-  .message{
-    font-size: 28px;
-    margin-top: 2%;
-  }
-  .message2{
-    font-size: 20px;
-    margin-top: 2%;
-  }
-  .routine{
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: white;
-    box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.4);
-  }
-  
-  
+.my-routines {
+  width: 80%;
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.4);
+  padding-bottom: 15px;
+}
+
+.header {
+  font-size: 60px;
+  margin-top: 2%;
+}
+.message {
+  font-size: 28px;
+  margin-top: 2%;
+}
+.message2 {
+  font-size: 20px;
+  margin-top: 2%;
+}
+.routine-author {
+  font-size: 16px;
+}
+.routine-header {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.routine-header h2 {
+  font-size: 40px;
+}
+.routine-header h4 {
+  font-size: 20px;
+}
+.select-activity {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.select-activity > label {
+  margin-right: 0.5rem;
+  font-weight: bold;
+}
+
+.select-activity > select,
+.select-activity > input {
+  margin-right: 0.5rem;
+  padding: 0.5rem;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  font-size: 1rem;
+  font-family: Arial, sans-serif;
+}
+
+.select-activity > select {
+  flex: 1;
+}
+
+.select-activity > input[type="number"] {
+  width: 6rem;
+}
+
+.select-activity > button {
+  padding: 0.5rem;
+  border-radius: 4px;
+  border: none;
+  background-color: #fc4c02;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.select-activity > button:hover {
+  background-color: #fc4c02;
+}
